--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.2",
+    "axios": "^1.6.8",
     "clsx": "^2.1.0",
     "formik": "^2.4.5",
     "modern-normalize": "^2.0.0",
